# Elypso-engine

./: .gitattributes  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CHANGES.txt  CMakeLists.txt  EULA.md  Eclipse engine.sln  Eclipse engine.vcxproj  Elypso engine.sln  Elypso engine.vcxproj  ElypsoEngine.vcxproj  ElypsoEngine.vcxproj.filters  FUTURE_GOALS.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  LIBRARIES.md  LICENSE  LICENSE.md  LINUX_SETUP.txt  Linux_prerequisites.txt  MIT LICENSE.md  Main.cpp  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  RUN_ME.bat  SECURITY.md  VISUAL_STUDIO_WSL_SETUP.txt  Windows_prerequisites.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  build_all.bat  build_all_linux.sh  build_all_windows.bat  build_and_create_installer.bat  compile and run.bat  create_installer.bat  git.sh  (+3 more)
Compiler/: CMakeLists.txt  CMakePresets.json  Compiler.cpp  Compiler.h  build_linux.sh  build_windows.bat
Compiler/include/: compile.hpp  configFile.hpp  core.hpp  fileUtils.hpp  gui.hpp  input.hpp  render.hpp  stringUtils.hpp
Compiler/src/: compile.cpp  configFile.cpp  core.cpp  fileUtils.cpp  gui.cpp  input.cpp  main.cpp  render.cpp  stringUtils.cpp
Editor/: CMakeLists.txt  CMakePresets.json  build_windows.bat  build_windows_debug.bat  build_windows_release.bat  project.kmake
Editor/include/game/: game_asset.hpp  game_core.hpp
Editor/src/engine/: main.cpp
Editor/src/game/: game_asset.cpp  game_core.cpp
Engine/: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  README.txt  build.bat  build_linux.sh  build_linux_debug.sh  build_linux_release.sh  build_windows.bat  build_windows_debug.bat  build_windows_release.bat  compile_commands.json  mf_linux.kmf  mf_win.kmf  project.kmake  quickBuild.bat  version.rc.in
Engine library/: CMakeLists.txt  CMakePresets.json  build_linux.sh  build_linux_debug.sh  build_linux_release.sh  build_windows.bat  build_windows_debug.bat  build_windows_release.bat
Engine/Engine/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
Engine/engine/bat scripts/: checkVersion.bat  compress.bat  decompress.bat
Engine/engine/shaders/: Basic.frag  Basic.vert  Basic_model.vert  Basic_texture.frag  GameObject.frag  GameObject.vert  Grid.frag  Grid.vert
Engine/engine/template files/: config.txt
Engine/files/: imgui.ini
Engine/files/models/: 111.fbx  cone.fbx  error.fbx
Engine/files/shaders/: Basic.vert  Basic_texture.vert  GameObject.frag  GameObject.vert  Grid.frag  Grid.vert  Light.vert  Light_Test.frag  Light_Test.vert  Skybox.vert
Engine/include/core/: compile.hpp  console.hpp  core.hpp  ee_core.hpp  ee_registry.hpp  en_core.hpp  en_registry.hpp  input.hpp  kg_registry.hpp  selectobject.hpp  timeManager.hpp
Engine/include/entity/: ee_entity.hpp  ee_entity_light.hpp  ee_entity_object.hpp
Engine/include/file/: configFile.hpp  gameObjectFile.hpp  nodeBlockFile.hpp  sceneFile.hpp
Engine/include/game/: game_asset.hpp  game_core.hpp
Engine/include/gameobject/: en_camera.hpp  en_opengl_model.hpp  en_opengl_point_light.hpp  kg_opengl_model.hpp
Engine/include/graphics/: _en_opengl_framebuffer.txt  camera.hpp  ee_entity.hpp  ee_render.hpp  ee_scene.hpp  ee_window.hpp  en_opengl_functions.hpp  en_opengl_texture.hpp  grid.hpp  kg_opengl_texture.hpp  ku_opengl_shader.hpp  ku_opengl_texture.hpp  render.hpp  shader.hpp  texture.hpp
Engine/include/physics/: selectobject.hpp
Engine/include/shaders/: en_shader_debug_line.hpp  en_shader_debug_shape.hpp  en_shader_model.hpp  kg_shader_debug_line.hpp  kg_shader_debug_shape.hpp
Engine/include/utils/: browserUtils.hpp  fileUtils.hpp  stringUtils.hpp
Engine/src/: main.cpp
Engine/src/core/: compile.cpp  console.cpp  core.cpp  ee_core.cpp  en_core.cpp  input.cpp  kg_camera.cpp  kg_core.cpp  kg_font.cpp  selectobject.cpp  timeManager.cpp
Engine/src/engine/: main.cpp
Engine/src/entity/: ee_entity_ai.cpp  ee_entity_camera.cpp  ee_entity_light.cpp  ee_entity_object.cpp  ee_entity_player.cpp
Engine/src/file/: configFile.cpp  fileexplorer.cpp  gameObjectFile.cpp  nodeBlockFile.cpp  sceneFile.cpp
Engine/src/game/: game_asset.cpp  game_core.cpp
Engine/src/gameobject/: en_camera.cpp  en_opengl_model.cpp  en_opengl_point_light.cpp  kg_opengl_model.cpp  kg_opengl_point_light.cpp
Engine/src/graphics/: ee_entity.cpp  ee_render.cpp  ee_scene.cpp  ee_window.cpp  en_opengl_functions.cpp  en_opengl_texture.cpp  grid.cpp  kg_opengl_texture.cpp  ku_opengl_shader.cpp  ku_opengl_texture.cpp  render.cpp  shader.cpp  texture.cpp
Engine/src/physics/: selectobject.cpp
Engine/src/utils/: browserUtils.cpp  fileUtils.cpp  stringUtils.cpp
Game/: CMakeLists.txt  CMakePresets.json  LICENSE,md  LICENSE.md  README.md  build.bat  build_engine_fast.bat  build_engine_full.bat  build_linux.sh  build_linux_debug.sh  build_windows.bat  build_windows_debug.bat  build_windows_release.bat  quickBuild.bat
Game/files/: icon.rc
Game/files/models/: cylinder.fbx  pyramid.fbx  sphere.fbx
Game/files/shaders/: Basic.frag  Basic_model.vert  GameObject.frag  GameObject.vert  Grid.frag  Skybox.frag
Game/include/: core.hpp  g_console.hpp  g_core.hpp  g_input.hpp  g_player.hpp  g_states.hpp  g_ui.hpp  gui.hpp  input.hpp
Game/include/core/: console.hpp  core.hpp  input.hpp  timeManager.hpp  timemanager.hpp
Game/include/file/: configFile.hpp  configfile.hpp  sceneFile.hpp  (+4 more)
Game/src/: core.cpp  g_console.cpp  g_core.cpp  g_input.cpp  g_player.cpp  g_ui.cpp  gui.cpp  input.cpp  main.cpp
Hub/: CMakeLists.txt  README.md  build.bat
Hub/include/: core.hpp  createproject.hpp  gui.hpp  main.hpp  removeproject.hpp  render.hpp
Hub/src/: core.cpp  createproject.cpp  gui.cpp  input.cpp  main.cpp  removeproject.cpp  render.cpp
IconChanger/: CMakeLists.txt  README.md  README.txt  build.bat
IconChanger/src/: main.cpp
Source manager/: CMakeLists.txt  README.txt  build.bat  setup.bat
SourceManager/: CMakeLists.txt  README.txt  build.bat
_external_shared/lua/: CMakeLists.txt  CMakePresets.json  README.md  build_windows.bat  project.kmake
(+1090 files in other folders)
